# python-gron

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: python-package.yaml
docs/: CHANGELOG.md  Makefile  api.md  api.rst  conf.py  index.md  index.rst
gron/: __init__.py  __main__.py  gron.py  version.py
tests/: test_gron.py  test_version.py
tests/data/: ugly.gron  ugly.json
tests/unit/: test_gron.py  test_version.py
