[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gron"
authors = [
    { name="Bastian Venthur", email="mail@venthur.de" },
]
description = "Python library to grep JSON."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]
dynamic = ["version"]

[project.scripts]
gron = "gron.__main__:main"

[project.urls]
'Documentation' = 'https://gron.readthedocs.io/'
'Source' = 'https://github.com/venthur/python-gron'
'Changelog' = 'https://github.com/venthur/python-gron/blob/master/CHANGELOG.md'

[tool.setuptools.dynamic]
version = {attr = "gron.__VERSION__" }

[tool.setuptools]
packages = ["gron"]

[tool.pytest.ini_options]
addopts = """
    --cov=gron
    --cov=tests
    --cov-report=html
    --cov-report=term-missing:skip-covered
"""

[tool.mypy]
files = "gron,tests"
strict = true
