[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gron"
authors = [
    { name="Bastian Venthur", email="mail@venthur.de" },
]
description = "Python library to grep JSON."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]
dynamic = ["version"]

[project.scripts]
gron = "gron.__main__:main"

[project.urls]
'Documentation' = 'https://gron.readthedocs.io/'
'Source' = 'https://github.com/venthur/python-gron'
'Changelog' = 'https://github.com/venthur/python-gron/blob/master/CHANGELOG.md'

[project.optional-dependencies]
dev = [
    "build==1.2.2",
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.34",
    "mkdocstrings[python]==0.26.1",
    "mypy==1.11.2",
    "pytest-cov==5.0.0",
    "pytest==8.3.2",
    "ruff==0.6.4",
    "sphinx==8.0.2",
    "twine==5.1.1",
    "wheel==0.44.0",
]

[tool.setuptools.dynamic]
version = {attr = "gron.__VERSION__" }

[tool.setuptools]
packages = ["gron"]

[tool.pytest.ini_options]
addopts = """
    --cov=gron
    --cov=tests
    --cov-report=html
    --cov-report=term-missing:skip-covered
"""

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",        # pyflakes
    "E", "W",   # pycodestyle
    "C90",      # mccabe
    "I",        # isort
    "D",        # pydocstyle
    "UP"        # pyupgrade
]
pydocstyle.convention = "numpy"

[tool.mypy]
files = "gron,tests"
strict = true
